# C-rabbitmqDemo

./: CMakeLists.txt  rabbitmq-c相关API.txt  rabbitmq笔记.txt  条件变量踩坑gdb调试.txt  笔试题.txt
demo/: demo.c  utils.c  utils.h
examples/: CMakeLists.txt  amqp_confirm_select.c  amqp_consumer.c  amqp_listen.c
source/: consumer.c  log.c  log.h  main.c  rabbitmq-c.c  rabbitmq-c.h  utils.c  utils.h
